# caduceus

./: .gitignore  CHANGELOG.md  CHANGELOG1.md  Notes.md  README.md  caduceus.cabal  hie.yaml  stack.yaml
src/: Main.hs
src/Banking/: IBAN.hs
src/Banking/IBAN/: Data.hs  Internal.hs
src/IBAN/: Data.hs  Internal.hs
src/Wires/: IBAN.hs  SWIFT.hs
src/Wires/IBAN/: Data.hs  Internal.hs
src/Wires/SWIFT/: Data.hs  Internal.hs
test/: ExampleIBANs.hs  ExampleSWIFTs.hs  IBANRegistryExamples.hs  Main.hs  Spec.hs
