cabal-version:      2.4
name:               caduceus
version:            0.1.0.0
synopsis:           A library to validate and generate IBANs and SWIFT codes.
description:        Validate and generate international wire data.  Handles IBANs and SWIFT codes.
bug-reports:        https://github.com/dmarticus/caduceus/issues
author:             Dylan Martin
maintainer:         dmarticus@gmail.com
homepage:            https://github.com/dmarticus/caduceus
-- license:             MIT
-- license-file:        LICENSE
copyright:           Dylan Martin, 2021
category:            Finance
build-type:          Simple
extra-source-files:
    Changelog.md
    Readme.md

executable caduceus
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
