cabal-version:      2.4
name:               caduceus
version:            0.1.0.0
synopsis:           A library to validate and generate IBANs and SWIFT codes.
description:        Validate and generate international wire data.  Handles IBANs and SWIFT codes.
homepage:           https://github.com/dmarticus/caduceus#readme
bug-reports:        https://github.com/dmarticus/caduceus/issues
author:             Dylan Martin
maintainer:         dmarticus@gmail.com
license:            MPL-2.0
license-file:        LICENSE
copyright:          Dylan Martin, 2021
category:           Finance
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/dmarticus/caduceus

library
  exposed-modules:    Wires.IBAN
                    , Wires.IBAN.Data
                    , Wires.IBAN.Internal
                    , Wires.SWIFT
                    , Wires.SWIFT.Data
                    , Wires.SWIFT.Internal
  other-extensions:   OverloadedStrings
  hs-source-dirs:     src
  ghc-options:        -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-deriving-strategies -fdiagnostics-color=always +RTS -A128m -n2m -RTS
  build-depends:      base >=4.7 && <5
                    , containers >=0.3 && <0.7
                    , iso3166-country-codes
                    , text >=0.11 && <1.3
  default-language:   Haskell2010

test-suite caduceus-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-extensions:   OverloadedStrings
  other-modules:      ExampleIBANs
  hs-source-dirs:     test
  ghc-options:        -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-deriving-strategies -fdiagnostics-color=always +RTS -A128m -n2m -RTS
  build-depends:      base >=4.7 && <5
                    , HUnit
                    , tasty
                    , tasty-hunit
                    , text
                    , caduceus
  default-language:   Haskell2010
